--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "healthcareapp",
   "license": "0BSD",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -10,13 +10,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.0",
+    "@react-native-community/slider": "^4.5.5",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.23",
+    "expo-constants": "^17.0.3",
+    "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
+    "openai": "^4.77.0",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-dom": "^18.3.1",
+    "react-native": "0.76.5",
+    "react-native-feather": "^1.1.2",
+    "react-native-fit-image": "^1.5.5",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-markdown-display": "^7.0.2",
+    "react-native-reanimated": "^3.16.6",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "^4.4.0",
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/lodash": "^4.17.13",
+    "@types/react": "^18.3.1",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
