--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
     "expo-constants": "^17.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
+    "i18next": "^24.2.0",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.1",
     "openai": "^4.77.0",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-native": "0.76.5",
     "react-native-feather": "^1.1.2",
     "react-native-fit-image": "^1.5.5",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-localize": "^3.3.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
