--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,14 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@services/*": ["src/services/*"],
+      "@components/*": ["src/components/*"],
       "@screens/*": ["src/screens/*"],
-      "@navigation/*": ["src/navigation/*"],
-      "@context/*": ["src/context/*"],
+      "@contexts/*": ["src/contexts/*"],
+      "@lib/*": ["src/lib/*"],
       "@styles/*": ["src/styles/*"],
-      "@hooks/*": ["src/hooks/*"]
+      "@hooks/*": ["src/hooks/*"],
+      "@theme/*": ["src/theme/*"],
+      "@i18n/*": ["src/i18n/*"]
     },
     "lib": ["es2018", "dom"],
     "types": ["react-native"]
