Update app assets, enhance authentication context, and improve onboarding experience
- Changed app icon and splash image to a new heart-rate icon.
- Integrated AuthProvider into the app structure for better authentication management.
- Enhanced AuthContext with improved session handling and profile update functionality.
- Updated i18n translations to include additional languages and improved existing translations.
- Refactored onboarding process to include new steps and better state management.
- Improved navigation flow and user experience during onboarding.
- Added translations for multiple languages

--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "HealthcareApp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/heart-rate.png",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/heart-rate.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -21,14 +21,14 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/heart-rate.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.ailege.healthcareapp",
       "newArchEnabled": true
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/heart-rate.png"
     },
     "plugins": [
       "expo-build-properties"
