Refactor TypeScript configuration, enhance theme context, and expand authentication translations
- Updated TypeScript paths in tsconfig.json to correct context directory structure.
- Enhanced ThemeContext to include color properties for better theme management.
- Added comprehensive authentication translations for Arabic, English, Spanish, Persian, Pashto, and Urdu, improving multilingual support for login, signup, and password recovery flows.
- Updated navigation structure to include new authentication screens: Login, Signup, ForgotPassword, and Welcome.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,13 @@
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
       "@screens/*": ["src/screens/*"],
-      "@contexts/*": ["src/contexts/*"],
+      "@context/*": ["src/context/*"],
       "@lib/*": ["src/lib/*"],
       "@styles/*": ["src/styles/*"],
       "@hooks/*": ["src/hooks/*"],
       "@theme/*": ["src/theme/*"],
-      "@i18n/*": ["src/i18n/*"]
+      "@i18n/*": ["src/i18n/*"],
+      "@navigation/*": ["src/navigation/*"]
     },
     "lib": ["es2018", "dom"],
     "types": ["react-native"]
@@ -30,4 +31,4 @@
     "metro.config.js",
     "jest.config.js"
   ]
-} 
+}
