Refactor authentication flow, enhance theme context, and improve navigation structure
- Updated Babel and TypeScript configurations to streamline module resolution with new path aliases.
- Enhanced AuthContext to support sign-in and sign-out functionalities, improving session management.
- Added LanguageSelectionScreen to allow users to choose their preferred language during onboarding.
- Refactored RootNavigator to include language selection and loading states for better user experience.
- Improved HomeScreen and LoginScreen with updated theme handling and component imports.
- Integrated new components for input and button to standardize UI elements across authentication screens.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,20 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json",
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "jsx": "react-native",
-    "noEmit": true,
-    "isolatedModules": true,
-    "skipLibCheck": true,
-    "allowJs": true,
-    "esModuleInterop": true,
-    "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
       "@screens/*": ["src/screens/*"],
-      "@screens": ["src/screens"],
-      "@contexts/*": ["src/contexts/*"],
-      "@hooks/*": ["src/hooks/*"],
-      "@theme/*": ["src/theme/*"],
-      "@styles/*": ["src/styles/*"],
-      "@lib/*": ["src/lib/*"],
-      "@i18n/*": ["src/i18n/*"],
-      "@services/*": ["src/services/*"],
       "@navigation/*": ["src/navigation/*"],
-      "@assets/*": ["src/assets/*"]
-    },
-    "lib": ["es2018", "dom"],
-    "types": ["react-native"]
-  },
-  "exclude": [
-    "node_modules",
-    "babel.config.js",
-    "metro.config.js",
-    "jest.config.js"
-  ]
+      "@contexts/*": ["src/contexts/*"],
+      "@theme/*": ["src/theme/*"],
+      "@assets/*": ["src/assets/*"],
+      "@lib/*": ["src/lib/*"],
+      "@utils/*": ["src/utils/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@i18n/*": ["src/i18n/*"]
+    }
+  }
 }
