--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "dotenv": "^16.4.7",
     "expo": "~52.0.23",
+    "expo-build-properties": "~0.13.1",
     "expo-constants": "^17.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
@@ -41,8 +42,7 @@
     "react-native-screens": "^4.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.19.13",
-    "expo-build-properties": "~0.13.1"
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
