--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "react-native-screens": "^4.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.19.13"
+    "react-native-web": "^0.19.13",
+    "expo-localization": "~16.0.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-svg-transformer": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
