Refactor authentication context and update module paths for improved structure
- Moved AuthContext from 'src/contexts' to 'src/context' for better organization.
- Enhanced AuthContext to manage user authentication state, onboarding status, and profile updates.
- Updated module imports across the application to reflect new path aliases in tsconfig.json.
- Improved navigation structure by ensuring consistent imports for authentication-related screens.
- Added new dependencies for SVG support and improved user experience in login and onboarding flows.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "@components/*": ["src/components/*"],
       "@screens/*": ["src/screens/*"],
       "@navigation/*": ["src/navigation/*"],
-      "@contexts/*": ["src/contexts/*"],
+      "@context/*": ["src/context/*"],
       "@theme/*": ["src/theme/*"],
       "@assets/*": ["src/assets/*"],
       "@lib/*": ["src/lib/*"],
