--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
       "@lib/*": ["src/lib/*"],
       "@utils/*": ["src/utils/*"],
       "@hooks/*": ["src/hooks/*"],
-      "@i18n/*": ["src/i18n/*"]
+      "@i18n/*": ["src/i18n/*"],
+      "@styles/*": ["src/styles/*"]
     }
   }
 }
