Refactor and enhance symptom analysis and UI/UX guidelines
- Updated Cursor AI rules for React Native development, emphasizing enhanced UI/UX and smart interactions.
- Refactored `useSymptomAnalysis` hook to streamline symptom analysis and improve message handling.
- Removed suggestions functionality temporarily for focused analysis.
- Improved error handling and message structure in `HomeScreen` for better user experience.
- Updated TypeScript configuration to include new path alias for services.
- Enhanced performance and accessibility guidelines in the Cursor AI rules.

These changes aim to create a more intuitive and user-centric experience in the application.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
       "@utils/*": ["src/utils/*"],
       "@hooks/*": ["src/hooks/*"],
       "@i18n/*": ["src/i18n/*"],
-      "@styles/*": ["src/styles/*"]
+      "@styles/*": ["src/styles/*"],
+      "@services/*": ["src/services/*"]
     }
   }
 }
