--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/metro-runtime": "~4.0.0",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/slider": "^4.5.5",
+    "@react-native-community/voice": "^1.1.9",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -20,9 +21,11 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "dotenv": "^16.4.7",
     "expo": "~52.0.23",
+    "expo-av": "^15.0.1",
     "expo-build-properties": "~0.13.1",
     "expo-constants": "^17.0.3",
     "expo-linear-gradient": "~14.0.1",
+    "expo-localization": "~16.0.0",
     "expo-status-bar": "~2.0.0",
     "i18next": "^24.2.0",
     "i18next-browser-languagedetector": "^8.0.2",
@@ -40,12 +43,11 @@
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-svg-transformer": "^1.3.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.19.13",
-    "expo-localization": "~16.0.0",
-    "react-native-svg": "^14.1.0",
-    "react-native-svg-transformer": "^1.3.0"
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
