Refactor symptom analysis components and enhance functionality
- Removed deprecated `BodyMap`, `SymptomInput`, `SymptomSelector`, and `useSymptomAnalysis` components to streamline the symptom reporting process.
- Introduced new path aliases in `babel.config.js` and `tsconfig.json` for improved module resolution.
- Updated `HomeScreen` to integrate new symptom analysis features, including enhanced user interaction and follow-up question handling.
- Added `react-native-dotenv` for environment variable management, improving configuration flexibility.
- Enhanced AI analysis logic in `ai.ts` to provide clearer guidelines for symptom assessment and follow-up questions.
- Improved overall structure and readability of the symptom analysis flow, creating a more intuitive user experience.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,12 @@
     "paths": {
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
-      "@screens/*": ["src/screens/*"],
+      "@features/*": ["src/features/*"],
+      "@symptoms/*": ["src/features/symptoms/*"],
+      "@symptoms/components/*": ["src/features/symptoms/components/*"],
+      "@symptoms/hooks/*": ["src/features/symptoms/hooks/*"],
+      "@symptoms/types": ["src/features/symptoms/types"],
+      "@symptoms/constants": ["src/features/symptoms/constants"],
       "@navigation/*": ["src/navigation/*"],
       "@context/*": ["src/context/*"],
       "@theme/*": ["src/theme/*"],
@@ -16,7 +21,8 @@
       "@hooks/*": ["src/hooks/*"],
       "@i18n/*": ["src/i18n/*"],
       "@styles/*": ["src/styles/*"],
-      "@services/*": ["src/services/*"]
+      "@services/*": ["src/services/*"],
+      "@screens/*": ["src/screens/*"]
     }
   }
 }
