--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
     "react-native": "0.76.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-feather": "^1.1.2",
     "react-native-fit-image": "^1.5.5",
     "react-native-gesture-handler": "^2.21.2",
