Enhance symptom analysis features and introduce new components
- Added new `HealthStatusWidget`, `RecentSymptoms`, `StepsTrackerWidget`, `StartAnalysisButton`, and `SymptomHistoryList` components to improve user interaction and symptom tracking.
- Updated `SymptomInput` to support voice recording and streamlined input handling.
- Refactored `HomeScreen` to integrate new components, enhancing the overall user experience and symptom reporting process.
- Updated `package.json` and `package-lock.json` to include new dependencies for improved functionality.
- Adjusted TypeScript configuration for better module resolution and path aliasing.
- Improved the structure and readability of the codebase, creating a more intuitive user experience in the symptom analysis flow.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
-  "extends": "expo/tsconfig.base",
+  "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
-    "strict": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
@@ -10,19 +9,19 @@
       "@symptoms/*": ["src/features/symptoms/*"],
       "@symptoms/components/*": ["src/features/symptoms/components/*"],
       "@symptoms/hooks/*": ["src/features/symptoms/hooks/*"],
-      "@symptoms/types": ["src/features/symptoms/types"],
-      "@symptoms/constants": ["src/features/symptoms/constants"],
-      "@navigation/*": ["src/navigation/*"],
-      "@context/*": ["src/context/*"],
+      "@symptoms/types/*": ["src/features/symptoms/types/*"],
+      "@symptoms/constants/*": ["src/features/symptoms/constants/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@screens/*": ["src/screens/*"],
       "@theme/*": ["src/theme/*"],
+      "@services/*": ["src/services/*"],
+      "@utils/*": ["src/utils/*"],
       "@assets/*": ["src/assets/*"],
       "@lib/*": ["src/lib/*"],
-      "@utils/*": ["src/utils/*"],
-      "@hooks/*": ["src/hooks/*"],
       "@i18n/*": ["src/i18n/*"],
       "@styles/*": ["src/styles/*"],
-      "@services/*": ["src/services/*"],
-      "@screens/*": ["src/screens/*"]
+      "@context/*": ["src/context/*"],
+      "@navigation/*": ["src/navigation/*"]
     }
   }
 }
