Add Home feature components and update TypeScript configuration
- Introduced new components for the Home feature, including `HealthStatusWidget`, `RecentSymptoms`, `StepsTrackerWidget`, `StartAnalysisButton`, and `HomeScreen`, enhancing user interaction and health tracking capabilities.
- Updated `tsconfig.json` to include new path aliases for better module resolution.
- Refactored `MainTabs` to import `HomeScreen` from the new path, ensuring consistent navigation structure.
- Improved overall code organization and readability, contributing to a more intuitive user experience in the symptom analysis flow.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,11 @@
       "@symptoms/hooks/*": ["src/features/symptoms/hooks/*"],
       "@symptoms/types/*": ["src/features/symptoms/types/*"],
       "@symptoms/constants/*": ["src/features/symptoms/constants/*"],
+      "@home/*": ["src/features/home/*"],
+      "@home/components/*": ["src/features/home/components/*"],
+      "@home/hooks/*": ["src/features/home/hooks/*"],
+      "@home/types/*": ["src/features/home/types/*"],
+      "@home/screens/*": ["src/features/home/screens/*"],
       "@hooks/*": ["src/hooks/*"],
       "@screens/*": ["src/screens/*"],
       "@theme/*": ["src/theme/*"],
