--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/slider": "^4.5.5",
     "@react-native-community/voice": "^1.1.9",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -26,6 +27,7 @@
     "expo-constants": "^17.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-localization": "~16.0.0",
+    "expo-speech": "^13.0.0",
     "expo-status-bar": "~2.0.0",
     "i18next": "^24.2.0",
     "i18next-browser-languagedetector": "^8.0.2",
@@ -48,7 +50,8 @@
     "react-native-svg-transformer": "^1.3.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.19.13"
+    "react-native-web": "^0.19.13",
+    "expo-dev-client": "~5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
