--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "healthcareapp",
+  "name": "aicura",
   "license": "0BSD",
   "version": "1.0.0",
   "main": "index.tsx",
@@ -12,19 +12,20 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/slider": "^4.5.5",
-    "@react-native-community/voice": "^1.1.9",
-    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@supabase/supabase-js": "^2.47.10",
     "@types/react-native-vector-icons": "^6.4.18",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "expo": "~52.0.23",
     "expo-av": "^15.0.1",
     "expo-build-properties": "~0.13.1",
     "expo-constants": "^17.0.3",
+    "expo-dev-client": "~5.0.8",
     "expo-linear-gradient": "~14.0.1",
     "expo-localization": "~16.0.0",
     "expo-speech": "^13.0.0",
@@ -50,8 +51,7 @@
     "react-native-svg-transformer": "^1.3.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.19.13",
-    "expo-dev-client": "~5.0.8"
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
