--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@supabase/supabase-js": "^2.47.10",
+    "@svgr/core": "^8.1.0",
+    "@svgr/plugin-jsx": "^8.1.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
@@ -47,7 +49,7 @@
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "^14.2.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
@@ -60,6 +62,8 @@
     "@types/lodash": "^4.17.13",
     "@types/react": "^18.3.1",
     "babel-plugin-module-resolver": "^5.0.2",
+    "sharp": "^0.33.5",
+    "svgexport": "^0.4.2",
     "typescript": "^5.3.3"
   },
   "private": true
