Refactor application branding and enhance configuration for improved user experience
- Renamed application from 'HealthcareApp' to 'AICura' in app.config.js and app.json for better branding.
- Updated package.json and package-lock.json to reflect new application name and improved dependency versions.
- Enhanced TypeScript configuration in tsconfig.json with additional path mappings for better module resolution.
- Refactored various components to utilize new asset paths and improved accessibility features.
- Integrated new plugins and dependencies for enhanced functionality and user interaction.
- Updated translations for symptom reporting and navigation to ensure clarity and consistency across languages.

--- a/app.json
+++ b/app.json
@@ -4,12 +4,12 @@
     "slug": "aicura",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./src/assets/icon.png",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./src/assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#1E293B"
+      "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -20,16 +20,38 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#1E293B"
+        "foregroundImage": "./src/assets/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
       },
       "package": "com.aicura.healthcareapp"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./src/assets/favicon.png"
     },
     "plugins": [
-      "expo-localization"
-    ]
+      "expo-localization",
+      "expo-av",
+      "expo-speech",
+      "expo-linear-gradient",
+      "react-native-svg",
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "deploymentTarget": "15.1",
+            "newArchEnabled": true
+          },
+          "android": {
+            "compileSdkVersion": 33,
+            "targetSdkVersion": 33,
+            "buildToolsVersion": "33.0.0",
+            "newArchEnabled": true
+          }
+        }
+      ]
+    ],
+    "experiments": {
+      "tsconfigPaths": true
+    }
   }
 }
