--- a/package.json
+++ b/package.json
@@ -4,67 +4,72 @@
   "version": "1.0.0",
   "main": "index.tsx",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
-    "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-native-community/slider": "^4.5.5",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/native-stack": "^7.2.0",
-    "@supabase/supabase-js": "^2.47.10",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/slider": "4.5.5",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@supabase/supabase-js": "^2.39.3",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@types/react-native-vector-icons": "^6.4.18",
-    "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
-    "expo": "~52.0.23",
-    "expo-av": "^15.0.1",
-    "expo-build-properties": "~0.13.1",
-    "expo-constants": "^17.0.3",
-    "expo-dev-client": "~5.0.8",
+    "date-fns": "^3.3.1",
+    "dotenv": "^16.4.1",
+    "expo": "^52.0.23",
+    "expo-av": "~15.0.1",
+    "expo-constants": "~17.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-localization": "~16.0.0",
-    "expo-speech": "^13.0.0",
+    "expo-speech": "~13.0.0",
     "expo-status-bar": "~2.0.0",
-    "i18next": "^24.2.0",
-    "i18next-browser-languagedetector": "^8.0.2",
-    "i18next-http-backend": "^3.0.1",
-    "openai": "^4.77.0",
+    "i18next": "^23.7.18",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
+    "openai": "^4.26.0",
     "react": "18.3.1",
-    "react-dom": "^18.3.1",
-    "react-i18next": "^15.4.0",
+    "react-dom": "18.3.1",
+    "react-i18next": "^14.0.1",
     "react-native": "0.76.5",
-    "react-native-dotenv": "^3.4.11",
+    "react-native-dotenv": "^3.4.9",
     "react-native-feather": "^1.1.2",
     "react-native-fit-image": "^1.5.5",
-    "react-native-gesture-handler": "^2.21.2",
-    "react-native-localize": "^3.3.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-localize": "^3.0.6",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-reanimated": "^3.16.6",
-    "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "^4.4.0",
-    "react-native-svg": "^14.2.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.19.13"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "~0.19.10",
+    "expo-build-properties": "~0.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@tsconfig/react-native": "^3.0.5",
-    "@types/jest": "^29.5.14",
-    "@types/lodash": "^4.17.13",
-    "@types/react": "^18.3.1",
-    "babel-plugin-module-resolver": "^5.0.2",
-    "sharp": "^0.33.5",
-    "svgexport": "^0.4.2",
+    "@babel/core": "^7.23.7",
+    "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.4",
+    "@babel/plugin-transform-optional-chaining": "^7.23.4",
+    "@tsconfig/react-native": "^3.0.3",
+    "@types/jest": "^29.5.11",
+    "@types/lodash": "^4.14.202",
+    "@types/react": "~18.3.12",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-preset-expo": "~12.0.0",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "install": {
+      "exclude": []
+    }
+  }
 }
